--- a/roles/updateLinux/tasks/rhel.yaml
+++ b/roles/updateLinux/tasks/rhel.yaml
@@ -1,7 +1,7 @@
 ---
 
 - name: install new packages rhel/centos
-  yum: name=compat-libcap1,compat-libstdc++-33,cpp,gcc,gcc-c++,glibc-devel,glibc-headers,kernel-headers,libXmu,libXt,ksh,libXxf86misc,libXxf86vm,libaio-devel,libdmx,libstdc++-devel,mpfr,make,xorg-x11-utils,xorg-x11-xauth,libXv,libXxf86dga,rsync,unzip state=latest
+  yum: name=compat-libcap1,compat-libstdc++-33,cpp,gcc,gcc-c++,glibc-devel,glibc-headers,kernel-headers,libXmu,libXt,ksh,libXxf86misc,libXxf86vm,libaio-devel,libdmx,libstdc++-devel,mpfr,make,xorg-x11-utils,xorg-x11-xauth,libXv,libXxf86dga,rsync,unzip,expect,rlwrap state=latest
   environment:
     http_proxy: "{{ proxy }}"
 
