--- a/roles/createAsmDg/tasks/main.yaml
+++ b/roles/createAsmDg/tasks/main.yaml
@@ -11,7 +11,7 @@
   with_items:
     "{{ asmdg_asmdisk }}"
 
-- name: create asm instance
+- name: create asm diskgroup
   shell: "{{ grid_home }}/bin/asmca -silent -createDiskGroup -sysAsmPassword {{ dbca_pwdsys }} -diskstring 'ORCL:*' -diskGroupName {{ asmdg_dgname }} -diskList '{{ asmdg_disklist[:-1] }}' -redundancy EXTERNAL"
   become: true
   become_user: grid
