--- a/roles/updateLinux/tasks/oraclelinux.yaml
+++ b/roles/updateLinux/tasks/oraclelinux.yaml
@@ -1,8 +1,10 @@
 ---
 
+- name: install epel repository
+  shell: "export https_proxy={{ proxy }}; yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm -y"
 
 - name: install new packages oracle linux
-  yum: name=rsync,unzip,oracle-rdbms-server-12cR1-preinstall
+  yum: name=rsync,unzip,expect,oracle-rdbms-server-12cR1-preinstall,rlwrap
 #  environment:
 #     http_proxy: "{{ proxy }}"
 
