--- a/roles/installGridPsuRAC/tasks/main.yaml
+++ b/roles/installGridPsuRAC/tasks/main.yaml
@@ -27,7 +27,7 @@
     - prepa
 
 - name: resync ntpdate
-  shell: "systemctl stop ntpd; ntpdate ntp1.svc.sigma.host; systemctl start ntpd"
+  shell: "systemctl stop ntpd; ntpdate ntp1.svc.toto.host; systemctl start ntpd"
 
 - name: patch conflict detection
   shell: "export ORACLE_HOME={{ grid_home }}; $ORACLE_HOME/OPatch/opatchauto apply {{ patch_dir }}/{{ grid_psu_number }} -analyze"
