--- a/roles/createDatabase/tasks/main.yaml
+++ b/roles/createDatabase/tasks/main.yaml
@@ -1,7 +1,12 @@
 ---
 
-- name: create dbca responsefile
-  template: src=dbca.rsp.tpl dest={{ patch_dir }}/dbca.rsp owner=oracle group=oinstall mode=0755
+- name: create dbca responsefile 11
+  template: src=dbca11.rsp.tpl dest={{ patch_dir }}/dbca.rsp owner=oracle group=oinstall mode=0755
+  when: major_version == 11
+
+- name: create dbca responsefile 12
+  template: src=dbca12.rsp.tpl dest={{ patch_dir }}/dbca.rsp owner=oracle group=oinstall mode=0755
+  when: major_version == 12
 
 - name: create directories
   file: path={{ item }} owner=oracle group=oinstall state=directory
@@ -18,77 +23,77 @@
   shell: "{{ oracle_home }}/bin/dbca -silent -responseFile {{ patch_dir }}/dbca.rsp"
   become: true
   become_user: oracle
-
-- name: configure adrci database
-  shell: |
-    source /home/oracle/.bash_profile
-    export ORACLE_SID={{ dbca_dbname }}
-    echo "set home diag/rdbms/{{ dbca_dbname |lower }}/{{ dbca_dbname |upper }}
-    set control (SHORTP_POLICY=168)
-    set control (LONGP_POLICY=168)" | {{ oracle_home }}/bin/adrci
-  become: true
-  become_user: oracle
-
-- name: configure default profile
-  shell: |
-    source /home/oracle/.bash_profile
-    export ORACLE_SID={{ dbca_dbname }}
-    echo "ALTER PROFILE DEFAULT LIMIT FAILED_LOGIN_ATTEMPTS UNLIMITED PASSWORD_LIFE_TIME UNLIMITED;" | sqlplus -s / as sysdba
-  become: true
-  become_user: oracle
-  register: profileAltered
-  failed_when: "'Profile altered' not in profileAltered.stdout"
-
-- name: noaudit ORA_SECURECONFIG
-  shell: |
-    source /home/oracle/.bash_profile
-    export ORACLE_SID={{ dbca_dbname }}
-    echo "noaudit policy ORA_SECURECONFIG;" | sqlplus -s / as sysdba
-  become: true
-  become_user: oracle
-  register: noauditSECURECONFIG
-  failed_when: "'Noaudit succeeded' not in noauditSECURECONFIG.stdout"
-
-- name: noaudit ORA_LOGON_FAILURES
-  shell: |
-    source /home/oracle/.bash_profile
-    export ORACLE_SID={{ dbca_dbname }}
-    echo "noaudit policy ORA_LOGON_FAILURES;" | sqlplus -s / as sysdba
-  become: true
-  become_user: oracle
-  register: noauditORA_LOGON_FAILURES
-  failed_when: "'Noaudit succeeded' not in noauditORA_LOGON_FAILURES.stdout"
-
-- name: disable audit_trail
-  shell: |
-    source /home/oracle/.bash_profile
-    export ORACLE_SID={{ dbca_dbname }}
-    echo "alter system set audit_trail='NONE' scope=spfile;" | sqlplus -s / as sysdba
-  become: true
-  become_user: oracle
-  register: systemAltered
-  failed_when: "'System altered' not in systemAltered.stdout"
-
-- name: use_large_pages only
-  shell: |
-    source /home/oracle/.bash_profile
-    export ORACLE_SID={{ dbca_dbname }}
-    echo "ALTER SYSTEM SET use_large_pages=only SCOPE=SPFILE;" | sqlplus -s / as sysdba
-  become: true
-  become_user: oracle
-  register: systemAltered
-  failed_when: "'System altered' not in systemAltered.stdout"
-
-- name: restart database
-  shell: |
-    source /home/oracle/.bash_profile
-    export ORACLE_SID={{ dbca_dbname }}
-    echo "shutdown immediate
-    startup" | sqlplus -s / as sysdba
-  become: true
-  become_user: oracle
-  register: restartDB
-  failed_when: "'ORA-' in restartDB.stdout"
+#
+#- name: configure adrci database
+#  shell: |
+#    source /home/oracle/.bash_profile
+#    export ORACLE_SID={{ dbca_dbname }}
+#    echo "set home diag/rdbms/{{ dbca_dbname |lower }}/{{ dbca_dbname |upper }}
+#    set control (SHORTP_POLICY=168)
+#    set control (LONGP_POLICY=168)" | {{ oracle_home }}/bin/adrci
+#  become: true
+#  become_user: oracle
+#
+#- name: configure default profile
+#  shell: |
+#    source /home/oracle/.bash_profile
+#    export ORACLE_SID={{ dbca_dbname }}
+#    echo "ALTER PROFILE DEFAULT LIMIT FAILED_LOGIN_ATTEMPTS UNLIMITED PASSWORD_LIFE_TIME UNLIMITED;" | sqlplus -s / as sysdba
+#  become: true
+#  become_user: oracle
+#  register: profileAltered
+#  failed_when: "'Profile altered' not in profileAltered.stdout"
+#
+#- name: noaudit ORA_SECURECONFIG
+#  shell: |
+#    source /home/oracle/.bash_profile
+#    export ORACLE_SID={{ dbca_dbname }}
+#    echo "noaudit policy ORA_SECURECONFIG;" | sqlplus -s / as sysdba
+#  become: true
+#  become_user: oracle
+#  register: noauditSECURECONFIG
+#  failed_when: "'Noaudit succeeded' not in noauditSECURECONFIG.stdout"
+#
+#- name: noaudit ORA_LOGON_FAILURES
+#  shell: |
+#    source /home/oracle/.bash_profile
+#    export ORACLE_SID={{ dbca_dbname }}
+#    echo "noaudit policy ORA_LOGON_FAILURES;" | sqlplus -s / as sysdba
+#  become: true
+#  become_user: oracle
+#  register: noauditORA_LOGON_FAILURES
+#  failed_when: "'Noaudit succeeded' not in noauditORA_LOGON_FAILURES.stdout"
+#
+#- name: disable audit_trail
+#  shell: |
+#    source /home/oracle/.bash_profile
+#    export ORACLE_SID={{ dbca_dbname }}
+#    echo "alter system set audit_trail='NONE' scope=spfile;" | sqlplus -s / as sysdba
+#  become: true
+#  become_user: oracle
+#  register: systemAltered
+#  failed_when: "'System altered' not in systemAltered.stdout"
+#
+#- name: use_large_pages only
+#  shell: |
+#    source /home/oracle/.bash_profile
+#    export ORACLE_SID={{ dbca_dbname }}
+#    echo "ALTER SYSTEM SET use_large_pages=only SCOPE=SPFILE;" | sqlplus -s / as sysdba
+#  become: true
+#  become_user: oracle
+#  register: systemAltered
+#  failed_when: "'System altered' not in systemAltered.stdout"
+#
+#- name: restart database
+#  shell: |
+#    source /home/oracle/.bash_profile
+#    export ORACLE_SID={{ dbca_dbname }}
+#    echo "shutdown immediate
+#    startup" | sqlplus -s / as sysdba
+#  become: true
+#  become_user: oracle
+#  register: restartDB
+#  failed_when: "'ORA-' in restartDB.stdout"
 
 
 
