--- a/roles/cleanInstallDir/tasks/main.yaml
+++ b/roles/cleanInstallDir/tasks/main.yaml
@@ -12,8 +12,18 @@
     - "{{ rdbms_zip_part1 }}"
     - "{{ rdbms_zip_part2 }}"
     - "{{ rdbms_psu }}"
+    - "{{ grid_ol7_psu }}"
     - oracleasm_config.sh
     - PatchSearch.xml
     - grid.rsp
-    - rdbms.rsp
+    - rdbms11.rsp
+    - rdbms12.rsp
+    - rdbmspsu.rsp
     - dbca.rsp
+    - sshKey.sh
+    - generatePsuRdbmsRespFile.sh
+    - generatePsuGridRespFile.sh
+    - bundle.xml
+    - gridpsu.rsp
+    - README.txt
+    - README.html
